add PREDICTIVE_LEAST_CONN in manifests/charts/base/crds/crd-all.gen.yaml and manifests/charts/base/files/gen-istio-cluster.yaml

--- a/manifests/charts/base/crds/crd-all.gen.yaml
+++ b/manifests/charts/base/crds/crd-all.gen.yaml
@@ -271,6 +271,7 @@ spec:
                             - LEAST_CONN
                             - RANDOM
                             - PASSTHROUGH
+                            - PREDICTIVE_LEAST_CONN
                             type: string
                         type: object
                       outlierDetection:
@@ -509,6 +510,7 @@ spec:
                                   - LEAST_CONN
                                   - RANDOM
                                   - PASSTHROUGH
+                                  - PREDICTIVE_LEAST_CONN
                                   type: string
                               type: object
                             outlierDetection:
@@ -821,6 +823,7 @@ spec:
                       - LEAST_CONN
                       - RANDOM
                       - PASSTHROUGH
+                      - PREDICTIVE_LEAST_CONN
                       type: string
                   type: object
                 outlierDetection:
@@ -1055,6 +1058,7 @@ spec:
                             - LEAST_CONN
                             - RANDOM
                             - PASSTHROUGH
+                            - PREDICTIVE_LEAST_CONN
                             type: string
                         type: object
                       outlierDetection:
