--- a/manifests/charts/base/files/gen-istio-cluster.yaml
+++ b/manifests/charts/base/files/gen-istio-cluster.yaml
@@ -273,6 +273,7 @@ spec:
                             - LEAST_CONN
                             - RANDOM
                             - PASSTHROUGH
+                            - PREDICTIVE_LEAST_CONN
                             type: string
                         type: object
                       outlierDetection:
@@ -511,6 +512,7 @@ spec:
                                   - LEAST_CONN
                                   - RANDOM
                                   - PASSTHROUGH
+                                  - PREDICTIVE_LEAST_CONN
                                   type: string
                               type: object
                             outlierDetection:
@@ -823,6 +825,7 @@ spec:
                       - LEAST_CONN
                       - RANDOM
                       - PASSTHROUGH
+                      - PREDICTIVE_LEAST_CONN
                       type: string
                   type: object
                 outlierDetection:
@@ -1057,6 +1060,7 @@ spec:
                             - LEAST_CONN
                             - RANDOM
                             - PASSTHROUGH
+                            - PREDICTIVE_LEAST_CONN
                             type: string
                         type: object
                       outlierDetection:
